# ID.NatalAI

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/v1/: generations.py  personas.py  prompt_templates.py
app/core/: celery_app.py  config.py  database.py  exceptions.py  logging.py
app/db/: models.py  seed.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial_schema.py
app/domain/generation/: ai_schemas.py  enums.py  models.py  schemas.py
app/domain/persona/: context.py  models.py  schemas.py
app/domain/prompts/: enums.py  models.py  schemas.py
app/repositories/: __init__.py  generation_repository.py  persona_repository.py  prompt_template_repository.py
app/services/: ai_generation_service.py  natal_chart_service.py  openrouter_client.py  persona_context_service.py  prompt_builder.py
app/workers/: tasks.py
docs/superpowers/plans/: 2026-05-15-natalai-backend-mvp.md
docs/superpowers/specs/: 2026-05-15-natalai-backend-mvp-design.md
tests/: conftest.py  test_celery_worker.py  test_conftest.py  test_core_foundation.py  test_domain_models.py  test_generation_pipeline.py  test_generations_api.py  test_natal_chart_service.py  test_persona_context.py  test_prompt_builder.py  test_repositories.py  test_schemas.py  test_seed.py
