[project]
name = "id-natalai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "anyio>=4.12.0",
    "asyncpg>=0.31.0",
    "celery>=5.6.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "kerykeion>=5.12.8",
    "notebook>=7.5.6",
    "orjson>=3.11.5",
    "openrouter>=0.9.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
